--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         android:roundIcon="@drawable/notebook"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyKotlinNotepad">
-        <activity android:name=".DetailNotesActivity"></activity>
-        <activity android:name=".SplashScreenActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".EditNotesActivity"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"></activity>
+        <activity android:name=".AddNotesActivity" />
+        <activity android:name=".DetailNotesActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
